# Project-A

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_client.bat  start_server.bat
Server/: .env.example  .gitignore  README.md  __init__.py  accounts.py  app.py  game_socket.py  install_cert.py  project_a_server.py  pyproject.toml  requirements.txt  ue_game_server.py
Server/projecta/: __init__.py
Server/projecta/control_plane/: __init__.py  app.py  certs.py  server.py
Server/projecta/control_plane/common/: __init__.py  assets.py  chat_format.py  ids.py  time_utils.py
Server/projecta/control_plane/data/: __init__.py  catalog.py  content_types.py
Server/projecta/control_plane/domain/: __init__.py  accounts.py  backend_state.py  queues.py  state_helpers.py  state_transitions.py
Server/projecta/control_plane/payloads/: __init__.py  chat.py  client.py  content.py  contracts.py  loadout.py  match.py  party.py  presence.py  realtime.py  social.py  store.py  voice.py
Server/projecta/control_plane/routes/: __init__.py  account.py  chat.py  client.py  content.py  contracts.py  core_game.py  matchmaking.py  misc.py  mmr.py  (+12 more)
Server/projecta/gameplay/: __init__.py  ares.py  ares_server.py  cli.py  event_log.py  handshake.py  observers.py  packet_analysis.py  socket.py  udp_replies.py  ue_control_channel.py
Server/projecta/storage/: __init__.py  accounts.py
Server/scripts/: start_server.ps1
Server/sql/: schema.sql
Server/tests/: test_accounts_parties.py  test_e2e_process_social.py
(+58 files in other folders)
